# RobonaorESP32

./: sdkconfig.defaults
components/iarduino_motor/: CMakeLists.txt  README.md  compat_arduino.h  iarduino_I2C_Motor.cpp  iarduino_I2C_Motor.h  iarduino_I2C_Motor_I2C.h
main/: CMakeLists.txt  main.cpp
main/components/comms/ble/: ble_comm.cpp  ble_comm.h
main/components/comms/parser/: command_parser.cpp  command_parser.h
main/components/manipulator/kinematics/: dh_params.h  kinematics.cpp  kinematics.h
main/components/manipulator/servo/: manipulator_servo.cpp  manipulator_servo.h
main/components/manipulator/trajectory/: trajectory.cpp  trajectory.h
main/components/platform/bus/: i2c_bus.cpp  i2c_bus.h
main/components/platform/mecanum/: mecanum.cpp  mecanum.h
main/components/platform/speed_profile/: speed_profile.cpp  speed_profile.h
